make new version of status contriller
