# src/main/java/org/bitebuilders/controller/requests/StatusUpdateRequest.java
@@ -1,0 +1,20 @@
+package org.bitebuilders.controller.requests;
+
+import jakarta.validation.constraints.Min;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class StatusUpdateRequest {
+    @NotBlank
+    private String name;
+
+    @NotNull
+    @Min(1)
+    private Integer displayOrder;
+}
